# cgame-mtp

./: .gitignore  README.md
bots/coders-strike-back-league-2/: README.txt  coders-strike-back-l2.cc
bots/hypersonic/: CMakeLists.txt  Makefile  README.txt  TODO  bomb.cc  bomb.h  hypersonic-tests.cc  hypersonic.cc  params.h  player.cc  player.h  test-data.txt  tests.h  utils.h  world.cc  world.h
bots/the-accountant/: Makefile  README.txt  params.h  params.h.wd.gpg  the-accountant.cc
code-golf/: Makefile  temperatures-code-golf.cc
common/: cgame-common-tests.cc  cgame-common-tests.h  cgame-common.cc  cgame-common.h
puzzles/bender-ep-4/: CMakeLists.txt  README.md  bender-ep-4-tests.cc  bender-ep-4.cc  worldmatrix2d.cc  worldmatrix2d.h
puzzles/gravity/: Makefile  README.md  gravity.cc
puzzles/mars lander - ep. 1/: CMakeLists.txt  README.md  mars-lander-1.cc
puzzles/mars-lander-ep-2/: CMakeLists.txt  README.md  mars-lander-2-main.cc  mars-lander-2.cc  shuttle.cc  shuttle.h  world.cc  world.h
puzzles/mimetype/: Makefile  mimetype.cc
puzzles/temperatures/: temperatures.cc
